--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -412,6 +412,7 @@ orthogonal ,/adj./@正交的;,/adj./@直角的;
 paedophile ,/n./@恋童癖者;
 pagination ,/n./@分页;
 parametric ,/n./@參數;
+paranormal ,/adj./@超自然的;,/adj./@超常的;
 paraphrase ,/v./@釋義;,/v./@改述;
 participle ,/n./@分詞;
 particular ,/adj./特定的;,/adj./@特殊的;,/adj./@挑剔的;
