--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -72,6 +72,7 @@ constituent ,/adj./@组成的;,/n./@成分;
 constructor ,/n./@构造器;,/n./@建造者;
 contaminate ,/v./@污染;
 contemplate ,/v./@沉思;
+contentious ,/adj./@有争议的;
 continental ,/adj./@大陸的;
 contingency ,/n./@事故;,/n./@意外;
 continuance ,/n./@繼續;
@@ -284,8 +285,8 @@ regurgitate ,/v./@回流;,/v./@反芻;,/v./@反胃;
 reluctantly ,/adj./@不情愿的;
 remembrance ,/n./@記憶;,/n./@紀念;,/n./@記性;
 reminiscent ,/adj./@追忆往事的;,/adj./@怀旧的;
-renaissance ,/n./@复活;,/n./@再生;
 Renaissance ,/n./@文艺复兴;
+renaissance ,/n./@复活;,/n./@再生;
 replacement ,/n./@代替;
 requirement ,/n./@要求;,/n./@需要;
 resemblance ,/n./@相似;
