--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -68,6 +68,7 @@ distillation ,/n./@蒸餾;
 distribution ,/n./@分布;,/n./@分配;
 emancipation ,/n./@解放;
 embarrassing ,/adj./@令人尴尬的;
+encroachment ,/n./@侵犯;,/n./@蚕食;
 entanglement ,/n./@纠纷;
 enthusiastic ,/adj./@热情的;
 entreprenant ,/adj./@大胆的;,/adj./@有上进心的;
