--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -81,6 +81,7 @@ predominantly ,/adv./@主要地;,/adv./@顯著的;
 psychological ,/adj./@心理学的;
 qualification ,/n./@资格;,/n./@条件;,/n./@限制;,/n./@赋予资格;
 questionnaire ,/n./@问卷;
+regimentation ,/n./@严格控制;,/n./@严密管制;
 reinforcement ,/n./@加强;,/n./@增援;
 righteousness ,/n./@正义;,/n./@公正;
 sadomasochism ,/n./@受虐狂;
