--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -1,4 +1,5 @@
 administration ,/n./@管理;,/n./@行政;
+archaeological ,/adj./@考古学的;
 authentication ,/n./@證明;,/n./@鑑定;,/n./@證實;
 characteristic ,/n./@特徵;,/n./@特性;
 circumvolution ,/n./@盤繞;,/n./@旋轉;
@@ -6,6 +7,7 @@ classification ,/n./@分类;
 congratulation ,/n./@祝贺;
 disappointedly ,/adv./@失望的;
 discrimination ,/n./@歧視;,/n./@辨別;,/n./@區別;
+gentrification ,/n./@中产阶级化;
 identification ,/n./@鉴定;
 implementation ,/n./@实现;,/n./@实行;,/n./@执行;
 infrastructure ,/n./@基础设施;
