--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -91,7 +91,7 @@ both ,/adv./@兩者都;,/conj./@既;,/adj./@兩個的;
 bowl ,/n./@碗;
 brew ,/v./@釀造;,/n./@釀造;
 brim ,/n./@邊緣;,/n./@邊;
-brow ,/n./@眉毛;,/n./@額;
+brow ,/n./@眉毛;,/n./@額;,/n./@山脊;,/n./@额头;
 buck ,/n./@錢;,/n./@雄鹿;
 bulb ,/n./@球形物;,/n./@燈泡;
 bulk ,/n./@大半;,/n./@體積;
@@ -369,7 +369,7 @@ goof ,/n./@呆瓜;,/v./@打发時間;
 goon ,/n./@呆子;
 goth ,/n./@野蠻人;,/n./@哥特人;
 gown ,/n./@長袍;
-grab ,/v./@抓住;,/v./@奪走;
+grab ,/v./@抓住;,/v./@奪走;,/vt./@霸占;
 grad ,/n./@畢業生;
 gray ,/adj./@灰色的;
 grew ,/v./<grow的過去式>@長大;
@@ -821,6 +821,7 @@ seed ,/n./@種子;
 seek ,/v./@尋覓;
 seem ,/v./@好像;
 seen ,/v./@看見;
+seep ,/vi./@渗出;,/vi./@透出;
 self ,/n./@自己;,/n./@自身;,/n./@品質;
 sell ,/v./@賣;
 send ,/v./@发送;
@@ -978,7 +979,7 @@ tout ,/v./@兜售;,/v./@招徕;,/v./@拉选票;,/n./@侦察者;,/n./@兜售者;
 town ,/n./@小鎭;
 trap ,/n./@圈套;,/n./@陷阱;,/v./@誘捕;,/n./@存水灣;
 tree ,/n./@樹;
-trek ,/n./@跋涉;,/v./@搬運;
+trek ,/n./@跋涉;,/v./@搬運;,/vi./@长途跋涉;
 trim ,/v./@修剪;,/v./@削減;
 trot ,/v./@小步快跑;,/v./@碎步急行;,/v./@快步走;
 troy ,/n./@特洛伊;
