--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -49,7 +49,7 @@ aloof ,/adj./@冷淡的;
 alpha ,/n./@α;
 altar ,/n./@聖壇;
 alter ,/v./@改變;
-amass ,/n./@積聚;
+amass ,/vt./@積聚;,/vt./@收集;
 amaze ,/v./@震驚;
 amber ,/n./@琥珀;,/adj./@琥珀色的;
 amble ,/vi./@緩行;
@@ -78,7 +78,7 @@ armor ,/n./@裝甲;
 aroma ,/n./@芳香;
 array ,/n./@數組;,/n.//vt./@排列;
 aside ,/adv./@在旁邊;,/adv./@撇開;
-askew ,/adj./@歪斜的;
+askew ,/adj./@歪斜的;,/adv./@歪斜地;
 asset ,/n./@優點;,/n./@資產;
 aster ,/n./@星狀體;,/n./@紫菀屬植物;
 atone ,/v./@贖回;
@@ -98,6 +98,7 @@ axial ,/adj./@軸的;,/adj./@軸向的;
 azure ,/adj./@蔚蓝的;,/adj./@碧蓝的;
 bacon ,/n./@鹹肉;,/n./@熏肉;
 badge ,/n./@徽章;,/n./@標記;
+bagel ,/n./@硬面包圈;
 baker ,/n./@麵包師;
 baron ,/n./@男爵;,/n./@領主;
 basic ,/adj./@基礎的;,/adj./@基本的;
@@ -322,7 +323,7 @@ disco ,/n./@迪斯科;
 ditch ,/n./@溝渠;
 ditto ,/n./@同上;,/adj./@同上的;
 divan ,/n./@沙發牀;,/n./@厚墊睡榻;
-dizzy ,/adj./@眩暈的;,/adj./@昏亂的;,/adj./@愚蠢的;
+dizzy ,/adj./@眩暈的;,/adj./@昏亂的;,/adj./@愚蠢的;,/adj./@困惑的;
 dodge ,/v./@躲閃;,/v./@躲避;
 dogma ,/n./@教條;,/n./@教理;
 doing ,/v./正在@做;,/v./@做;
@@ -555,6 +556,7 @@ hound ,/v./@追獵;,/v./@煩擾;
 house ,/n./@房子;
 hover ,/v./@盤旋;,/v./@翺翔;,/v./@徘徊;
 human ,/n./@人類;,/adj./@人類的;
+humid ,/adj./@湿的;,/adj./@潮濕的;
 humor ,/redirected./@target="humour";
 hurry ,/n./@匆忙;,/v./@趕緊;
 ideal ,/adj./@理想的;
@@ -622,7 +624,7 @@ lingo ,/n./@行話;
 links ,/v./@鏈接;
 litre ,/n./@升;
 liver ,/n./@肝脏;
-lobby ,/n./@前廳;,/v./@遊說;
+lobby ,/n./@前廳;,/v./@遊說;,/n./@大堂;
 local ,/adj./@當地的;
 lodge ,/n./@旅館;,/n./@門房;,/v./@提出;,/v./@寄存;,/v./@寄宿;
 logic ,/n./@邏輯;
@@ -1071,7 +1073,7 @@ storm ,/n./@風暴;
 story ,/n./@故事;
 stove ,/n./@爐子;
 strap ,/v./@捆紥;,/n./@皮帶;
-strip ,/v./@剝奪;
+strip ,/v./@剝奪;,/vt./@脱掉;,/vt./@脱光;,/n./@条;,/n./@狭长地带;,/n./@队服;,/n./@脱衣舞;,/vt./@除去;
 strop ,/v./@磨;
 stuck ,/v./@被卡住;
 study ,/v./@研究;,/v./@學習;
