--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -95,6 +95,7 @@ attach ,/v./@附加;,/v./@係;
 attack ,/vt./@攻擊;
 attain ,/v./@達到;,/v./@獲得;
 attend ,/v./@出席;,/v./@照料;,/v./@陪伴;
+attest ,/vt./@证实;,/vt./@作证;,/vi./@证明;
 attune ,/v./@合拍;
 August ,/n./@八月;
 author ,/n./@作者;
@@ -119,6 +120,7 @@ barley ,/n./@大麥;
 barrel ,/n./@桶;,/n./@管;
 barren ,/adj./@不育的;,/adj./@貧瘠的;
 barter ,/n./@易貨貿易;
+basalt ,/n./@玄武岩;
 basket ,/n./@籃;
 battle ,/n./@戰爭;
 bawdry ,/n./@猥褻;,/n./@賣淫;
@@ -164,7 +166,7 @@ breeze ,/n./@微風;
 bridge ,/n./@橋;
 bridle ,/n./@韁繩;,/v./@約束;,/v./@抑制;,/v./@控制;
 bright ,/adj./@明亮的;,/adj./@聰明的;
-broach ,/v./@鑽孔;
+broach ,/v./@鑽孔;,/vt./@引入;,/vt./@启用;
 broken ,/adj./@破碎的;,/adj./@燬壞的;
 brooch ,/n./@胸針;,/n./@領針;
 browse ,/v./@瀏覽;
@@ -291,7 +293,7 @@ course ,/n./@課程;
 cousin ,/n./@堂兄弟姐妹;,/n./@表兄弟姐妹;
 covert ,/n./@隱藏處;,/adj./@隱蔽的;,/adj./@隱秘的;
 coward ,/n./@懦夫;
-cradle ,/n./@搖籃;
+cradle ,/n./@搖籃;,/n./@发源地;
 cranky ,/adj./@暴躁的;,/adj./@古怪的;
 crappy ,/adj./@蹩脚的;,/adj./@糟糕的;
 crater ,/n./@坑;,/n./@彈坑;,/n./@火山口;
@@ -351,6 +353,7 @@ depict ,/v./@描述;,/v./@描畫;
 deploy ,/v./@解雇;
 depute ,/v./@委任;
 deputy ,/n./@副手;,/n./@代理;
+derail ,/vt./@脱轨;
 deride ,/v./@嘲笑;
 derive ,/v./@源于;
 desert ,/n./@沙漠;,/n./@荒原;,/v./@遺棄;,/v./@離棄;,/v./@抛棄;,/v./@放棄;,/v./@擅離;,/v./@逃跑;,/v./@逃亡;,/n./@賞罰;,/n./@功德;,/n./@功勞;,/adj./@荒蕪的;
@@ -368,7 +371,7 @@ diesel ,/n./@柴油機;
 differ ,/v./@不同;
 digest ,/v./@消化;,/v./@吸收;,/n./@文摘;
 dilate ,/v./@膨脹;,/v./@擴大;,/v./@詳述;
-dilute ,/v./@稀釋;
+dilute ,/v./@稀釋;,/vt./@削弱;
 dinghy ,/n./@小艇;,/n./@小船;
 dinner ,/n./@晚餐;
 direct ,/adj./@直接的;,/v./@指挥;,/v./@支配;
@@ -519,7 +522,7 @@ fridge ,/n./@冰箱;
 friend ,/n./@朋友;
 fright ,/n./@驚嚇;
 frigid ,/adj./@寒冷的;
-fringe ,/n./@邊緣;
+fringe ,/n./@邊緣;,/adj./@非主流的;,/n./@流苏;
 frisky ,/adj./@活潑的;
 frugal ,/adj./@節儉的;,/adj./@樸素的;
 frumpy ,/adj./@過時的;
@@ -804,6 +807,7 @@ mystic ,/adj./@神秘的;
 napkin ,/n./@餐巾;,/n./@餐巾紙;
 narrow ,/adj./@窄的;
 nation ,/n./@國家;,/n./@民族;
+native ,/adj./@出生国的;,/adj./@出生地的;,/adj./@天生的;,/adj./@当地的;,/adj./@本国的;,/adj./@原住民的;
 nature ,/n./@自然;
 nausea ,/n./@噁心;,/n./@暈船;,/n./@厭惡;
 nearby ,/adj./@附近的;
@@ -876,10 +880,11 @@ passby ,/v./@旁路;,/v./@經過;
 pastel ,/n./@粉蠟筆;
 pastry ,/n./@酥皮糕點;
 patent ,/n./@專利;,/adj./@明顯的;
-patrol ,/n./@巡邏;,/n./@巡邏隊;,/n./@偵察隊;
+patrol ,/n./@巡邏;,/n./@巡邏隊;,/n./@偵察隊;,/vi./@巡逻;
 patron ,/n./@贊助人;,/n./@主顧;
 peanut ,/n./@花生;
 pebble ,/n./@卵石;
+peddle ,/vt./@兜售;,/vt./@宣传;,/vt./@非法贩卖;,/vt./@散播;
 peking ,/n./@北京;
 pencil ,/n./@鉛筆;
 people ,/n./@人;
@@ -1106,6 +1111,7 @@ sentry ,/n./@哨兵;,/n./@崗哨;
 sequel ,/n./@結局;,/n./@續篇;
 serene ,/adj./@平靜的;,/adj./@清澈的;
 series ,/n./@係列;
+sermon ,/n./@布道;,/n./@说教;
 serval ,/n./@藪貓;
 settle ,/v./@解決;,/v./@定居;,/v./@安排;
 severe ,/adj./@嚴峻的;
@@ -1178,6 +1184,7 @@ splash ,/v./@濺;,/v./@潑;
 sponge ,/n./@海綿;
 sports ,/n./@運動;
 spouse ,/n./@配偶;
+sprain ,/vt./@扭伤;,/n./@扭伤;
 spread ,/v./@傳播;
 spring ,/n./@春;,/n./@泉;
 sprint ,/v./@衝刺;
@@ -1294,7 +1301,7 @@ toggle ,/n./@開關;,/n./@觸發器;,/n./@拴扣;,/n./@套索釘;,/v./@拴牢;,/
 toilet ,/n./@廁所;
 tomato ,/n./@番茄;
 tongue ,/n./@舌;,/n./@語言;
-topple ,/v./@推倒;,/v./@顛覆;
+topple ,/v./@推倒;,/v./@顛覆;,/vi./@倒下;
 torpor ,/n./@冷漠;
 toward ,/prep./@向;
 tragic ,/adj./@悲慘的;
@@ -1342,8 +1349,8 @@ urbane ,/adj./@文雅的;,/adj./@有禮貌的;,/adj./@都市化的;
 urgent ,/adj./@緊迫的;,/adj./@緊急的;
 useful ,/n.//adj./@有用的;
 utmost ,/adj./@極度的;,/n./@極限;
-Utopia ,/n./@烏托邦;
 utopia ,/n./@烏托邦;
+Utopia ,/n./@烏托邦;
 vacant ,/adj./@空的;,/adj./@空缺的;,/adj./@未佔用的;
 vacuum ,/n./@眞空;
 vagina ,/n./@陰道;
