--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -63,6 +63,7 @@ anxiety ,/n./@緊張;,/n./@焦慮;
 anxious ,/adj./@焦慮的;
 apology ,/v./@道歉;
 apparel ,/n./@服裝;,/n./@衣服;,/v./@穿@衣;
+appease ,/vt./@安抚;,/vt./@平息;,/vt./@抚慰;,/vt./@缓解;
 applaud ,/v./@鼓掌;,/v./@稱贊;,/v./@喝彩;
 appoint ,/v./@任命;,/v./@約定;
 apprise ,/v./@通知;
@@ -174,6 +175,7 @@ caption ,/n./@標題;
 capture ,/v./@俘獲;,/v./@捕獲;
 caracal ,/n./@獰貓;,/n./@野貓;
 caramel ,/n./@焦糖;,/n./@飴糖;
+caravan ,/n./@房车;,/n./@大篷车;,/n./@车队;,/n./@旅行队;
 carcass ,/n./@屍體;
 careful ,/adj./@小心的;
 carmine ,/n./@洋紅;,/adj./@洋紅色的;
@@ -200,8 +202,8 @@ charter ,/n./@憲章;,/n./@特許證;
 cherish ,/v./@珍視;
 chicken ,/n./@小鷄;
 chimney ,/n./@煙囪;
-chinese ,/n./@漢語;
 Chinese ,/n./@漢語;
+chinese ,/n./@漢語;
 chowder ,/n./@雜燴;
 chronic ,/adj./@慢性的;,/adj./@長期的;
 chuckle ,/v./@輕笑;
@@ -229,6 +231,7 @@ command ,/v./@命令;
 commend ,/v./@推薦;,/v./@稱贊;
 comment ,/v./@評論;,/n./@评论;
 commune ,/v./@談心;,/v./@密切交流;,/n./@公社;
+commute ,/vi./@通勤;,/vt./@减轻;,/n./@上下班路程;
 compact ,/n./@合同;,/n./@契约;,/adj./@紧凑的;,/adj./@紧密的;,/adj./@简洁的;
 company ,/n./@公司;
 compare ,/v./@比較;
@@ -279,7 +282,7 @@ convent ,/n./@女修道院;
 convert ,/v./@轉變;,/v./@改變;
 convict ,/v./@證明@有罪;
 copious ,/adj./@豐富的;
-cordial ,/adj./@熱誠的;,/adj./@诚恳的;
+cordial ,/adj./@熱誠的;,/adj./@诚恳的;,/adj./@强烈的;
 corpora ,/n./@全集;,/n./@主體;
 correct ,/adj./@正確的;
 corrupt ,/v./@腐化;,/v./@使腐化;
@@ -391,7 +394,7 @@ doormat ,/n./@受氣包;
 dormant ,/adj./@休眠的;
 drastic ,/adj./@激烈的;
 dubiety ,/n./@懷疑;
-dubious ,/adj./@可疑的;
+dubious ,/adj./@可疑的;,/adj./@不确定的;,/adj./@怀疑的;
 duelist ,/n./@決斗者;
 dukedom ,/n./@公國;,/n./@公爵地位;,/n./@公爵領地;
 dungeon ,/n./@地牢;
@@ -419,6 +422,7 @@ emotion ,/n./@情感;
 emperor ,/n./@皇帝;
 emplace ,/v./@安放;,/v./@安置;,/v./@放列;
 empower ,/v./@授權;,/v./使@能夠;
+enclave ,/n./@飞地;
 endorse ,/v./@認可;,/v./@簽署;
 enforce ,/v./@強迫;
 England ,/n./@英國;
@@ -479,6 +483,7 @@ feeling ,/n./@感觉;,/n./@知觉;,/n./@感情;
 feigned ,/adj./@假的;
 fertile ,/adj./@肥沃的;,/adj./@富饒的;
 fervent ,/adj./@强烈的;,/adj./@热烈的;
+fervour ,/n./@热忱;
 fiction ,/n./@虛構;,/adj./@虛構的;,/adj./@捏造的;
 fifteen ,/adj./@十五;
 filling ,/n./@填充;,/n./@餡料;
@@ -780,7 +785,7 @@ outcome ,/n./@結果;
 outdoor ,/adj./@室外的;,/adj./@野外的;,/adj./@露天的;
 outline ,/n./@大綱;
 outlook ,/n./@觀點;,/n./@展望;,/n./@前景;
-outpost ,/n./@前哨;
+outpost ,/n./@前哨;,/n./@边远居民点;
 outrage ,/n./@激怒;
 outrank ,/v./@髙于;
 outside ,/prep./在...之@外;
@@ -833,6 +838,7 @@ phantom ,/n./@幽靈;,/n./@幻影;
 phoenix ,/n./@鳳凰;
 physics ,/n./@物理學;
 picture ,/n./@圖片;
+pillage ,/vt./@劫掠;,/n./@劫掠;
 pioneer ,/n./@先驅;
 piquant ,/adj./@辛辣的;
 pitcher ,/n./@水罐;
@@ -1072,6 +1078,7 @@ sponsor ,/n./@贊助;,/n./@贊助者;
 squalid ,/adj./@骯髒的;,/adj./@汙穢的;,/adj./@卑劣的;
 squeeze ,/v./@擠榨;
 stagger ,/v./@蹣跚;
+stalker ,/n./@跟踪者;
 stamina ,/n./@毅力;,/n./@精力;,/n./@活力;,/n./@持久力;
 startle ,/v./@驚愕;
 station ,/n./@車站;
@@ -1159,6 +1166,7 @@ tragedy ,/n./@悲劇;
 trailer ,/n./@拖車;,/n./@預告片;,/n./@追蹤者;
 traitor ,/n./@叛徒;
 trample ,/v./@踐踏;
+tranche ,/n./@部分;
 tremble ,/v./@顫抖;
 tribune ,/n./@保民官;
 tribute ,/n./@頌詞;,/n./@獻禮;
