--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -282,6 +282,7 @@ diagnose ,/v./@诊断;
 diagonal ,/adj./@對角線的;
 dialogue ,/n./@對話;,/v./@對話;
 diameter ,/n./@直径;
+diaspora ,/n./@大流散;,/n./@海外犹太人;,/n./@背井离乡的人们;
 dictator ,/n./@獨裁者;
 diligent ,/adj./@努力的;
 diminish ,/v./@减少;,/v./@縮小;
@@ -387,7 +388,7 @@ exciting ,/adj./@令人兴奋的@<excite的正在进行时>;
 exercise ,/n./@鍛煉;,/n./@練習;
 exertion ,/n./@发挥;,/n./@运用;,/n./@费力;,/n./@尽力;
 existent ,/adj./@存在的;
-exorcise ,/vt./@驅除@邪魔;,/v./@設法忘卻;
+exorcise ,/vt./@驅除@邪魔;,/v./@設法忘卻;,/vt./@消除;
 exorcize ,/redirected./@target="exorcise";
 expiable ,/adj./@可赎的;
 expirate ,/v./@呼气;
@@ -460,6 +461,7 @@ grapheme ,/n./@字素;,/n./@字母;,/n./@字位;
 grateful ,/adj./@感激的;
 greatest ,/adj./@最伟大的;
 greeting ,/n./@问候;,/n./@致敬;,/n./@欢迎;
+gruesome ,/adj./@恐怖的;,/adj./@令人厌恶的;
 guardian ,/n./@保護人;,/n./@監護人;,/adj./@守護的;
 guidance ,/v./@指导;
 gymnasia ,/n./@體育館;,/n./@健身房;
@@ -488,6 +490,7 @@ horrific ,/adj./@可怕的;
 hospital ,/n./@医院;
 humanism ,/n./@人道主義;
 humanity ,/n./@人類;,/n./@人性;
+humidity ,/n./@湿度;,/n./@潮湿;
 humility ,/n./@謙虛;
 humorous ,/adj./@幽默的;
 hygienic ,/adj./@衛生的;
@@ -806,6 +809,7 @@ reliable ,/adj./@可靠的;
 reliance ,/n./@依賴;,/n./@依靠;
 religion ,/n./@宗教;
 remember ,/v./@记得;,/v./@想起;,/v./@記住;
+renegade ,/adj./@叛教的;,/n./@叛徒;,/adj./@反叛的;,/n./@叛逆者;
 renovate ,/v./@更新;,/v./@修复;
 repartee ,/n./@妙語;,/n./@巧辯;,/n./@機智的回答;
 reporter ,/n./@報告人;,/n./@記者;
@@ -900,6 +904,7 @@ splatter ,/vt./@泼溅;,/vi./@啪嗒作响;,/n./@啪嗒声;
 splendid ,/adj./@壮丽的;
 splendor ,/n./@光彩;,/n./@壯麗;
 sporadic ,/adj./@零星的;,/adj./@分散的;,/adj./@偶發的;
+sprinkle ,/vt./@洒;,/vt./@撒;,/n./@少量;
 spurious ,/adj./@假的;
 squander ,/v./@浪費;
 stallion ,/n./@種馬;,/n./@成年公馬;
