--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -209,6 +209,7 @@ criticize ,/v./@批评;
 crocodile ,/n./@鳄鱼;
 crossword ,/n./@纵横字谜;
 cruciform ,/adj./@十字形的;
+culminate ,/vi./@告终;
 cultivate ,/v./@培养;
 curiosity ,/n./@好奇心;,/n./@好奇;
 currently ,/adv./@目前;
@@ -560,6 +561,7 @@ oscillate ,/v./@震盪;,/v./@擺動;
 ostracize ,/v./@排斥;,/v./@排擠;,/v./@孤立;
 otherwise ,/conj.//adv./@否則;,/adv./@另外;,/adj./@另外的;
 outermost ,/adj./@最外的;
+outskirts ,/n./@市郊;,/n./@边缘;,/n./@郊区;
 oversight ,/n./@监督;,/n./@照管;,/n./@疏忽;
 overthrew ,/v./@推翻;
 overwhelm ,/v./@征服;
@@ -567,6 +569,7 @@ overwrite ,/v./@覆盖;
 ownership ,/n./@所有权;
 palanquin ,/n./@轎子;,/n./@肩輿;
 palatable ,/adj./@美味的;,/adj./@可口的;
+panoramic ,/adj./@全景的;,/adj./@概括的;
 pansexual ,/adj./@泛性的;
 parachute ,/n./@降落傘;
 paragraph ,/n./@段落;,/n./@節;
