--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -72,6 +72,7 @@ constituent
 constructor
 contaminate
 contemplate
+contentious
 continental
 contingency
 continuance
@@ -284,8 +285,8 @@ regurgitate
 reluctantly
 remembrance
 reminiscent
-renaissance
 Renaissance
+renaissance
 replacement
 requirement
 resemblance
