--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -95,6 +95,7 @@ attach
 attack
 attain
 attend
+attest
 attune
 August
 author
@@ -119,6 +120,7 @@ barley
 barrel
 barren
 barter
+basalt
 basket
 battle
 bawdry
@@ -351,6 +353,7 @@ depict
 deploy
 depute
 deputy
+derail
 deride
 derive
 desert
@@ -804,6 +807,7 @@ mystic
 napkin
 narrow
 nation
+native
 nature
 nausea
 nearby
@@ -880,6 +884,7 @@ patrol
 patron
 peanut
 pebble
+peddle
 peking
 pencil
 people
@@ -1106,6 +1111,7 @@ sentry
 sequel
 serene
 series
+sermon
 serval
 settle
 severe
@@ -1178,6 +1184,7 @@ splash
 sponge
 sports
 spouse
+sprain
 spread
 spring
 sprint
@@ -1342,8 +1349,8 @@ urbane
 urgent
 useful
 utmost
-Utopia
 utopia
+Utopia
 vacant
 vacuum
 vagina
