--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -63,6 +63,7 @@ anxiety
 anxious
 apology
 apparel
+appease
 applaud
 appoint
 apprise
@@ -174,6 +175,7 @@ caption
 capture
 caracal
 caramel
+caravan
 carcass
 careful
 carmine
@@ -200,8 +202,8 @@ charter
 cherish
 chicken
 chimney
-chinese
 Chinese
+chinese
 chowder
 chronic
 chuckle
@@ -229,6 +231,7 @@ command
 commend
 comment
 commune
+commute
 compact
 company
 compare
@@ -419,6 +422,7 @@ emotion
 emperor
 emplace
 empower
+enclave
 endorse
 enforce
 England
@@ -479,6 +483,7 @@ feeling
 feigned
 fertile
 fervent
+fervour
 fiction
 fifteen
 filling
@@ -833,6 +838,7 @@ phantom
 phoenix
 physics
 picture
+pillage
 pioneer
 piquant
 pitcher
@@ -1072,6 +1078,7 @@ sponsor
 squalid
 squeeze
 stagger
+stalker
 stamina
 startle
 station
@@ -1159,6 +1166,7 @@ tragedy
 trailer
 traitor
 trample
+tranche
 tremble
 tribune
 tribute
