--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -282,6 +282,7 @@ diagnose
 diagonal
 dialogue
 diameter
+diaspora
 dictator
 diligent
 diminish
@@ -460,6 +461,7 @@ grapheme
 grateful
 greatest
 greeting
+gruesome
 guardian
 guidance
 gymnasia
@@ -488,6 +490,7 @@ horrific
 hospital
 humanism
 humanity
+humidity
 humility
 humorous
 hygienic
@@ -806,6 +809,7 @@ reliable
 reliance
 religion
 remember
+renegade
 renovate
 repartee
 reporter
@@ -900,6 +904,7 @@ splatter
 splendid
 splendor
 sporadic
+sprinkle
 spurious
 squander
 stallion
