--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -209,6 +209,7 @@ criticize
 crocodile
 crossword
 cruciform
+culminate
 cultivate
 curiosity
 currently
@@ -560,6 +561,7 @@ oscillate
 ostracize
 otherwise
 outermost
+outskirts
 oversight
 overthrew
 overwhelm
@@ -567,6 +569,7 @@ overwrite
 ownership
 palanquin
 palatable
+panoramic
 pansexual
 parachute
 paragraph
