--- a/Files/lang/en/english14.csv
+++ b/Files/lang/en/english14.csv
@@ -1,4 +1,5 @@
 administration
+archaeological
 authentication
 characteristic
 circumvolution
@@ -6,6 +7,7 @@ classification
 congratulation
 disappointedly
 discrimination
+gentrification
 identification
 implementation
 infrastructure
